Base Character C++ class

--- a/Aura.uproject
+++ b/Aura.uproject
@@ -3,6 +3,16 @@
 	"EngineAssociation": "{ACAB06C9-4E21-D97E-323C-E5A5B1DF5809}",
 	"Category": "",
 	"Description": "",
+	"Modules": [
+		{
+			"Name": "Aura",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
 	"Plugins": [
 		{
 			"Name": "ModelingToolsEditorMode",
